# ff8frpack

./: .gitignore  CMakeLists.txt  README.md  qt.cmake
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
deploy/: CMakeLists.txt  deployqt.cmake  deployqt.cmake.in
lang/: CMakeLists.txt  FF8frPack_en.ts  FF8frPack_fr.ts
src/: ff8installation.cpp  ff8installation.h  ffnxconfig.cpp  ffnxconfig.h  ffnxinstallation.cpp  ffnxinstallation.h  geturl.cpp  geturl.h  helpwidget.cpp  helpwidget.h  installprogression.cpp  installprogression.h  main.cpp  package.cpp  package.h  provisionner.cpp  provisionner.h  window.cpp  window.h  wizard.cpp  wizard.h  zip.cpp  zip.h
src/core/: ff8frpackinstallation.cpp  ff8frpackinstallation.h  ff8installation.cpp  ff8installation.h  ffnxconfig.cpp  ffnxconfig.h  ffnxinstallation.cpp  ffnxinstallation.h  process.cpp  process.h  provisionner.cpp  provisionner.h
src/pages/: configpage.cpp  configpage.h  errorpage.cpp  errorpage.h  welcomepage.cpp  welcomepage.h
src/patcher/: arguments.cpp  arguments.h  argumentsconfigure.cpp  argumentsconfigure.h  argumentsprovision.cpp  argumentsprovision.h  commonarguments.cpp  commonarguments.h  helparguments.cpp  helparguments.h  main.cpp
src/widgets/: flatcombobox.cpp  flatcombobox.h  helpwidget.cpp  helpwidget.h  resizablelabel.cpp  resizablelabel.h
src/wizardpages/: wizardpageinstall.cpp  wizardpageinstall.h  wizardpageintro.cpp  wizardpageintro.h
